k8s/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pharmacy-db
  namespace: pharmacy
spec:
  serviceName: "pharmacy-db"
  replicas: 1
  selector:
    matchLabels:
      app: pharmacy-db
  volumeClaimTemplates:
    - metadata:
        name: pharmacy-db-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: my-storage-class
        resources:
          requests:
            storage: 1Gi
  template:
    metadata:
      labels:
        app: pharmacy-db
    spec:
      containers:
        - name: pharmacy-db
          image: postgres
          ports:
            - containerPort: 5432
