k8s/service-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: pharmacy
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
