k8s/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: pharmacy-db
  namespace: pharmacy
spec:
  selector:
    app: pharmacy-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
