k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pharmacy-ingress
  namespace: pharmacy
spec:
  rules:
    - host: pharmacies.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: app-service
                port:
                  number: 80
